# forager-sre

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  Makefile  README.md  SECURITY.md  index.html  nginx.conf  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omo/run-continuation/: ses_0f0befd2dffeK2sbc8xYeACYyv.json
examples/: alertmanager.yml  docker-compose.yml  forager.yaml
examples/runbooks/: high-error-rate.yaml
forager/: __init__.py  agent.py  cli.py  config.py  postmortem.py  remediation.py  runbooks.py  server.py  store.py
forager/adapters/: alertmanager.py  argocd.py  cloudwatch.py  datadog.py  github.py  jaeger.py  jira.py  kubernetes.py  llm.py  loki.py  pagerduty.py  prometheus.py  sentry.py  slack.py
tests/: test_agent.py  test_agent_tools.py  test_alertmanager.py  test_argocd.py  test_cloudwatch.py  test_confidence_feedback.py  test_config.py  test_datadog.py  test_github.py  test_hardening.py  test_jaeger.py  test_jira.py  test_kubernetes.py  test_llm.py  test_llm_retry.py  test_loki.py  test_memory.py  test_new_adapters.py  test_onecall.py  test_pagerduty.py  test_prometheus.py  test_remediation.py  test_runbooks.py  test_sentry.py  test_server.py  test_server_new.py  test_slack.py  test_store.py
