[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forager-sre"
version = "0.1.0"
description = "Autonomous SRE agent: investigates alerts via Prometheus, Kubernetes, and GitHub, then posts cited root-cause analyses to Slack."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["sre", "incident-response", "aiops", "llm", "prometheus", "kubernetes", "root-cause-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "kubernetes>=31.0.0",
    "slack-sdk>=3.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
litellm = [
    "litellm>=1.50",
]

[project.urls]
Homepage = "https://github.com/yadavalli1/forager-sre"
Repository = "https://github.com/yadavalli1/forager-sre"
Issues = "https://github.com/yadavalli1/forager-sre/issues"
Changelog = "https://github.com/yadavalli1/forager-sre/blob/main/CHANGELOG.md"

[project.scripts]
forager = "forager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "B008",  # typer.Option in argument defaults is the typer idiom
]
