[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forager-sre"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "kubernetes>=31.0.0",
    "slack-sdk>=3.33.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]

[project.scripts]
forager = "forager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forager*"]
